second Commit; chages : services are working ; jquery, highCharts  and bundle assets added  and working

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+app_t360:
+    resource: "@AppT360Bundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 data_layer:
     resource: "@DataLayerBundle/Controller/"
     type:     annotation
